.metals/.reports/metals/2023-09-07/r_scala-toplevel-mtags_21-17-04-165
id: file://<WORKSPACE>/chapter-3/list.scala:[13..13) in Input.VirtualFile("file://<WORKSPACE>/chapter-3/list.scala", "sealed trait ")
file://<WORKSPACE>/chapter-3/list.scala:1: error: expected identifier; obtained eof
sealed trait 
             ^